# reversi

./: .gitignore  CMakeLists.txt  README.md  ceventfilter.cpp  ceventfilter.h  cgameoptions.cpp  cgameoptions.h  cgamesettings.cpp  cgamesettings.h  cplayer.cpp  cplayer.h  cplayersettings.cpp  cplayersettings.h  creversigame.cpp  creversigame.h  creversiwidget.cpp  creversiwidget.h  csettings.cpp  csettings.h  gamesettings.ui  main.cpp  options.ui  playersettings.ui  reversi.pro  reversiapp.cpp  reversiapp.h  reversiapp.qrc  reversiapp.ui  utility.cpp  utility.h
android/: AndroidManifest.xml
assets/: deploy_qt_reversi.sh  makeicns.sh  postinstall.txt  reversi.icns  reversi.iss
